bereinigt für release